arquivo local para replicacao quando rodar

--- a/.env.local
+++ b/.env.local
@@ -1,2 +1,2 @@
-MONGODB_URI=mongodb://localhost:27017/node-balancer
+MONGODB_URI=mongodb://127.0.0.1:27020/node-balancer?retryWrites=true&w=majority
 PORT=3000
