--- a/package.json
+++ b/package.json
@@ -1,13 +1,26 @@
 {
-  "name": "nodebalancer",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "name": "replica-failover-mongodb-ts",
+  "version": "1.0.1",
+  "description": "O sistema replica um dos conceitos básicos da arquitetura de sistemas distribuído, na qual ele tem uma API em express.js com TypeScript, e usando o mongoDB com replicaSET e failover, consegue automáticamente garantir disponibilidade e redundância de dados das requisições.",
+  "main": "dist/server.js",
+  "types": "dist/server.d.ts",
   "scripts": {
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
     "ops:demo": "ts-node src/scripts/demo_failover.ts"
+  },
+  "files": [
+    "dist/**/*",
+    "README.md"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/JoaoIto/node-balancer.git"
+  },
+  "homepage": "https://github.com/JoaoIto/node-balancer#readme",
+  "bugs": {
+    "url": "https://github.com/JoaoIto/node-balancer/issues"
   },
   "keywords": [],
   "author": "",
