--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
-    "ops:demo": "ts-node src/scripts/demo_failover.ts"
+    "ops:demo": "ts-node src/scripts/demo_failover.ts",
+    "dashboard": "ts-node src/scripts/dashboard.ts"
+  },
+  "bin": {
+    "node-balancer-dashboard": "./dist/scripts/dashboard.js"
   },
   "files": [
     "dist/**/*",
@@ -26,6 +30,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/blessed": "^0.1.26",
+    "blessed": "^0.1.81",
+    "blessed-contrib": "^4.11.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
