--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "replica-failover-mongodb-ts",
-  "version": "2.2.3",
+  "version": "3.0.1",
   "description": "O sistema replica um dos conceitos básicos da arquitetura de sistemas distribuído, na qual ele tem uma API em express.js com TypeScript, e usando o mongoDB com replicaSET e failover, consegue automáticamente garantir disponibilidade e redundância de dados das requisições.",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
@@ -31,12 +31,16 @@
   "license": "ISC",
   "dependencies": {
     "@types/blessed": "^0.1.26",
+    "axios": "^1.13.2",
     "blessed": "^0.1.81",
     "blessed-contrib": "^4.11.0",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.1",
     "morgan": "^1.10.1",
+    "prom-client": "^15.1.3",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "winston": "^3.18.3"
   },
   "devDependencies": {
