HOTFIX: TS mais recente estável é a ~5.7 Adicionei o script "test": "node dist/scripts/test_read_pref.js"

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
+    "test": "node dist/scripts/test_read_pref.js",
     "dev": "nodemon --exec ts-node src/server.ts",
     "build": "tsc",
     "start": "node dist/server.js",
@@ -51,6 +52,6 @@
     "@types/node": "^24.8.0",
     "nodemon": "^3.1.10",
     "ts-node": "^10.9.2",
-    "typescript": "^5.9.3"
+    "typescript": "^5.6.3"
   }
 }
