--- a/package.json
+++ b/package.json
@@ -30,6 +30,11 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "peerDependencies": {
+    "@nestjs/common": "^8.0.0 || ^9.0.0 || ^10.0.0",
+    "@nestjs/core": "^8.0.0 || ^9.0.0 || ^10.0.0",
+    "rxjs": "^7.0.0"
+  },
   "dependencies": {
     "@types/blessed": "^0.1.26",
     "@types/inquirer": "^9.0.9",
@@ -47,10 +52,15 @@
     "winston": "^3.18.3"
   },
   "devDependencies": {
+    "@nestjs/common": "^11.1.13",
+    "@nestjs/core": "^11.1.13",
+    "@nestjs/platform-express": "^11.1.13",
     "@types/express": "^5.0.3",
     "@types/morgan": "^1.9.10",
     "@types/node": "^24.8.0",
     "nodemon": "^3.1.10",
+    "reflect-metadata": "^0.2.2",
+    "rxjs": "^7.8.2",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
